feat(unit-test): improve code coverage